[gd_scene load_steps=70 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes2/ChairOral.gd" type="Script" id=4]
[ext_resource path="res://Player/Props/chair.png" type="Texture" id=5]

[sub_resource type="AnimationNodeAnimation" id=446]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=447]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=520]
animation = "ChairOralLickFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=521]
animation = "ChairOralLick_1-loop"

[sub_resource type="AnimationNodeAnimation" id=522]
animation = "ChairOralRub_1-loop"

[sub_resource type="AnimationNodeAnimation" id=523]
animation = "ChairOralStroke_1-loop"

[sub_resource type="AnimationNodeAnimation" id=524]
animation = "ChairOralSuckFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=525]
animation = "ChairOralSuckInside_1-loop"

[sub_resource type="AnimationNodeAnimation" id=526]
animation = "ChairOralSuck_1-loop"

[sub_resource type="AnimationNodeAnimation" id=527]
animation = "ChairOralTease_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=528]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=529]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=530]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=531]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=532]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=533]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=534]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=535]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=536]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=537]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=538]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=539]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=540]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=541]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=542]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=543]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=544]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=545]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=576]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=577]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=546]
states/ChairOralLickFast_1-loop/node = SubResource( 520 )
states/ChairOralLickFast_1-loop/position = Vector2( 808, 256 )
states/ChairOralLick_1-loop/node = SubResource( 521 )
states/ChairOralLick_1-loop/position = Vector2( 760, 181 )
states/ChairOralRub_1-loop/node = SubResource( 522 )
states/ChairOralRub_1-loop/position = Vector2( 854, 80 )
states/ChairOralStroke_1-loop/node = SubResource( 523 )
states/ChairOralStroke_1-loop/position = Vector2( 186, 48 )
states/ChairOralSuckFast_1-loop/node = SubResource( 524 )
states/ChairOralSuckFast_1-loop/position = Vector2( 164, 309 )
states/ChairOralSuckInside_1-loop/node = SubResource( 525 )
states/ChairOralSuckInside_1-loop/position = Vector2( 192, 132 )
states/ChairOralSuck_1-loop/node = SubResource( 526 )
states/ChairOralSuck_1-loop/position = Vector2( 342, 219 )
states/ChairOralTease_1-loop/node = SubResource( 527 )
states/ChairOralTease_1-loop/position = Vector2( 505, 65 )
transitions = [ "ChairOralStroke_1-loop", "ChairOralTease_1-loop", SubResource( 528 ), "ChairOralTease_1-loop", "ChairOralStroke_1-loop", SubResource( 529 ), "ChairOralTease_1-loop", "ChairOralRub_1-loop", SubResource( 530 ), "ChairOralRub_1-loop", "ChairOralTease_1-loop", SubResource( 531 ), "ChairOralTease_1-loop", "ChairOralLick_1-loop", SubResource( 532 ), "ChairOralLick_1-loop", "ChairOralTease_1-loop", SubResource( 533 ), "ChairOralLick_1-loop", "ChairOralLickFast_1-loop", SubResource( 534 ), "ChairOralLickFast_1-loop", "ChairOralLick_1-loop", SubResource( 535 ), "ChairOralTease_1-loop", "ChairOralSuckInside_1-loop", SubResource( 536 ), "ChairOralSuckInside_1-loop", "ChairOralTease_1-loop", SubResource( 537 ), "ChairOralTease_1-loop", "ChairOralSuck_1-loop", SubResource( 538 ), "ChairOralSuck_1-loop", "ChairOralTease_1-loop", SubResource( 539 ), "ChairOralSuckInside_1-loop", "ChairOralSuck_1-loop", SubResource( 540 ), "ChairOralSuck_1-loop", "ChairOralSuckInside_1-loop", SubResource( 541 ), "ChairOralSuckFast_1-loop", "ChairOralSuck_1-loop", SubResource( 542 ), "ChairOralSuck_1-loop", "ChairOralSuckFast_1-loop", SubResource( 543 ), "ChairOralSuckFast_1-loop", "ChairOralSuckInside_1-loop", SubResource( 544 ), "ChairOralSuckInside_1-loop", "ChairOralSuckFast_1-loop", SubResource( 545 ), "ChairOralRub_1-loop", "ChairOralLick_1-loop", SubResource( 576 ), "ChairOralLick_1-loop", "ChairOralRub_1-loop", SubResource( 577 ) ]
start_node = "ChairOralTease_1-loop"
graph_offset = Vector2( 31, 34 )

[sub_resource type="AnimationNodeBlendTree" id=547]
graph_offset = Vector2( -348.69, 38.9555 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 546 )
nodes/StateMachine/position = Vector2( 140, 120 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "CuffsBlend", "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=460]

[sub_resource type="AnimationNodeAnimation" id=548]
animation = "ChairOralLickFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=549]
animation = "ChairOralLick_2-loop"

[sub_resource type="AnimationNodeAnimation" id=550]
animation = "ChairOralRub_2-loop"

[sub_resource type="AnimationNodeAnimation" id=551]
animation = "ChairOralStroke_2-loop"

[sub_resource type="AnimationNodeAnimation" id=552]
animation = "ChairOralSuckFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=553]
animation = "ChairOralSuckInside_2-loop"

[sub_resource type="AnimationNodeAnimation" id=554]
animation = "ChairOralSuck_2-loop"

[sub_resource type="AnimationNodeAnimation" id=555]
animation = "ChairOralTease_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=556]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=557]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=558]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=559]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=560]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=561]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=562]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=563]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=564]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=565]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=566]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=567]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=568]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=569]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=570]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=571]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=572]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=573]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=578]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=579]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=574]
states/ChairOralLickFast_2-loop/node = SubResource( 548 )
states/ChairOralLickFast_2-loop/position = Vector2( 774, 282 )
states/ChairOralLick_2-loop/node = SubResource( 549 )
states/ChairOralLick_2-loop/position = Vector2( 774, 181 )
states/ChairOralRub_2-loop/node = SubResource( 550 )
states/ChairOralRub_2-loop/position = Vector2( 840, 70 )
states/ChairOralStroke_2-loop/node = SubResource( 551 )
states/ChairOralStroke_2-loop/position = Vector2( 267, 70 )
states/ChairOralSuckFast_2-loop/node = SubResource( 552 )
states/ChairOralSuckFast_2-loop/position = Vector2( 248, 342 )
states/ChairOralSuckInside_2-loop/node = SubResource( 553 )
states/ChairOralSuckInside_2-loop/position = Vector2( 296, 172 )
states/ChairOralSuck_2-loop/node = SubResource( 554 )
states/ChairOralSuck_2-loop/position = Vector2( 419, 270 )
states/ChairOralTease_2-loop/node = SubResource( 555 )
states/ChairOralTease_2-loop/position = Vector2( 560, 53 )
transitions = [ "ChairOralTease_2-loop", "ChairOralStroke_2-loop", SubResource( 556 ), "ChairOralStroke_2-loop", "ChairOralTease_2-loop", SubResource( 557 ), "ChairOralTease_2-loop", "ChairOralSuckInside_2-loop", SubResource( 558 ), "ChairOralSuckInside_2-loop", "ChairOralTease_2-loop", SubResource( 559 ), "ChairOralTease_2-loop", "ChairOralSuck_2-loop", SubResource( 560 ), "ChairOralSuck_2-loop", "ChairOralTease_2-loop", SubResource( 561 ), "ChairOralSuckInside_2-loop", "ChairOralSuck_2-loop", SubResource( 562 ), "ChairOralSuck_2-loop", "ChairOralSuckInside_2-loop", SubResource( 563 ), "ChairOralSuckInside_2-loop", "ChairOralSuckFast_2-loop", SubResource( 564 ), "ChairOralSuckFast_2-loop", "ChairOralSuckInside_2-loop", SubResource( 565 ), "ChairOralSuck_2-loop", "ChairOralSuckFast_2-loop", SubResource( 566 ), "ChairOralSuckFast_2-loop", "ChairOralSuck_2-loop", SubResource( 567 ), "ChairOralTease_2-loop", "ChairOralRub_2-loop", SubResource( 568 ), "ChairOralRub_2-loop", "ChairOralTease_2-loop", SubResource( 569 ), "ChairOralTease_2-loop", "ChairOralLick_2-loop", SubResource( 570 ), "ChairOralLick_2-loop", "ChairOralTease_2-loop", SubResource( 571 ), "ChairOralLick_2-loop", "ChairOralLickFast_2-loop", SubResource( 572 ), "ChairOralLickFast_2-loop", "ChairOralLick_2-loop", SubResource( 573 ), "ChairOralRub_2-loop", "ChairOralLick_2-loop", SubResource( 578 ), "ChairOralLick_2-loop", "ChairOralRub_2-loop", SubResource( 579 ) ]
start_node = "ChairOralTease_2-loop"
graph_offset = Vector2( 166, 26 )

[sub_resource type="AnimationNodeBlendTree" id=575]
graph_offset = Vector2( -322.532, 74.6842 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 574 )
nodes/StateMachine/position = Vector2( 160, 120 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "CuffsBlend", "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=473]

[node name="ChairOral" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.317465, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.320606, 0.0519446, -0.0201359 )

[node name="Doll3D2" parent="." index="2" instance=ExtResource( 1 )]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0.320606, 0.0519446, 0 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource( 547 )
anim_player = NodePath("../Doll3D/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 460 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 575 )
anim_player = NodePath("../Doll3D2/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 473 )

[node name="Chair" type="Sprite3D" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.38318, 1.69609, 0.069 )
texture = ExtResource( 5 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D/DollSkeleton2"]
[editable path="Doll3D2"]
[editable path="Doll3D2/DollSkeleton"]
[editable path="Doll3D2/DollSkeleton2"]
